# Reactor

./: .dockerignore  .env.example  .gitignore  Dockerfile.daemon  MODULES.md  NOTICE  README.md  available-permissions.json  boot.js  capacitor.config.ts  daemon.js  daemonctl.js  docker-compose.exchange.yml  docker-compose.yml  guidelines.md  ipcHandlers.js  package-lock.json  package.json  preload.js  reactor.service  runtime.js  tsconfig.json  working-mode.json
assets/: logo.icns
capacitor/android/app/src/main/cpp/: CMakeLists.txt  quickjs_jni.cpp
coturn-server/: .env.example  README.md  coturnctl.js  docker-compose.yml  turnserver.conf
docs/: byte-conv.md  core-api-examples.md  docker-compose-exchange.md  exchange-auth.md  exchange.md  linux-server-exchange-setup.md  monitor-exchange.md  multiplatform-architecture.md  node-communication.md  second-conv.md  setup-webrtc.md  simple-exchange-setup.md  simple-webrtc-setup.md  triggers.md  webrtc.md
exchange-server/: .env.example  Dockerfile.daemon  README.md  daemon.js  daemonctl.js  docker-compose-exchange.md  docker-compose.yml  exchange.md  linux-server-exchange-setup.md  package.json  simple-exchange-setup.md
future/: improve-stream-reliability.md
scripts/: build-mobile.js  event-boot.ts  event-message-receiver.ts  event-message-sender.ts  event-net_down.ts  event-net_off.ts  make-mac-icon.sh  message-receive.ts  message-send.ts  patch-svelte-file-protocol.js  receive-save.ts  schedule.ts  upload-test.txt  watch-send.ts  watch.ts
src/: connectionsConfig.js  context.ts  core.d.ts  envStore.js  event.ts  exchangeManager.js  metadata.js  networkMonitor.js  p2pDataChannelManager.js  runtime.js  scheduleParser.js  scriptLoader.js  tlsManager.js  ui.js  workingModeConfig.js
templates/: blank  (+3 more)
(+118 files in other folders)
